--- a/calculator/calculator.html
+++ b/calculator/calculator.html
@@ -16,87 +16,93 @@
 <body>
     <p>Calculator</p>
     <p>
-        <button onclick="calculation += '1';
-            console.log(calculation);">
+        <button onclick="updateCalculation('1');">
             1
         </button>
-        <button onclick="calculation += '2';
-            console.log(calculation);">
+        <button onclick="updateCalculation('2');">
             2
         </button>
-        <button onclick="calculation += '3';
-            console.log(calculation);">
+        <button onclick="updateCalculation('3');">
             3
         </button>
-        <button onclick="calculation += ' + ';
-            console.log(calculation);">
+        <button onclick="updateCalculation('+');">
             +
         </button>
     </p>
     <p>
-        <button onclick="calculation += '4';
-            console.log(calculation);">
+        <button onclick="updateCalculation('4');">
             4
         </button>
-        <button onclick="calculation += '5';
-            console.log(calculation);">
+        <button onclick="updateCalculation('5');">
             5
         </button>
-        <button onclick="calculation += '6';
-            console.log(calculation);">
+        <button onclick="updateCalculation('6');">
             6
         </button>
-        <button onclick="calculation += ' - ';
-            console.log(calculation);">
+        <button onclick="updateCalculation('-');">
             -
         </button>
     </p>
     <p>
-        <button onclick="calculation += '7';
-            console.log(calculation);">
+        <button onclick="updateCalculation('7');">
             7
         </button>
-        <button onclick="calculation += '8';
-            console.log(calculation);">
+        <button onclick="updateCalculation('8');">
             8
         </button>
-        <button onclick="calculation += '9';
-            console.log(calculation);">
+        <button onclick="updateCalculation('9');">
             9
         </button>
-        <button onclick="calculation += ' * ';
-            console.log(calculation);">
+        <button onclick="updateCalculation('*');">
             *
         </button>
     </p>
     <p>
-        <button onclick="calculation += '0';
-            console.log(calculation);">
+        <button onclick="updateCalculation('0');">
             0
         </button>
-        <button onclick="calculation += '.';
-            console.log(calculation);">
+        <button onclick="updateCalculation('.');">
             .
         </button>
-        <button onclick="calculation = eval(calculation);
-            console.log(calculation);">
+        <button onclick="updateCalculation('=');">
             =
         </button>
-        <button onclick="calculation += ' / ';
-            console.log(calculation);">
+        <button onclick="updateCalculation('/');">
             /
         </button>
     </p>
     <p>
         <button class="clear-btn"
-            onclick="calculation = '';
-                     console.log('cleared.')">
+                onclick="updateCalculation('clear');">
             Clear
         </button>
     </p>
 
     <script>
+        //
+        console.log("Modified because of exercise 7g.");
+        //
+
         let calculation = '';
+
+        // Here the element means any number or mathematical
+        // operator and also the equal sign.
+        function updateCalculation(element) {
+            if (element === '=') {
+                calculation = eval(calculation);
+            } else if (element === 'clear') {
+                calculation = '';
+                console.log('cleared.')
+                return;
+            } else if (element === '+' || element === '-' || 
+                       element === '*' || element === '/') {
+                calculation += ` ${element} `;
+            } else {
+                calculation += `${element}`;
+            }
+
+            console.log(calculation);
+        }
     </script>
 </body>
 </html>
