--- a/mdn-silly-story-generator/index.html
+++ b/mdn-silly-story-generator/index.html
@@ -1,28 +1,31 @@
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width" />
-    <title>Silly story generator</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <title>Silly Story Generator</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="main.js"></script>
   </head>
   <body>
     <div>
-      <label for="customname">Enter custom name:</label>
-      <input id="customname" type="text" placeholder="" />
+      <label for="customname-input">Enter custom name:</label>
+      <input id="customname-input">
     </div>
+    
     <div>
       <label for="us">US</label>
-      <input id="us" type="radio" name="ukus" value="us" checked />
-      
+      <input id="us" type="radio" name="ukus" value="us" checked>
+
       <label for="uk">UK</label>
-      <input id="uk" type="radio" name="ukus" value="uk" />
+      <input id="uk" type="radio" name="ukus" value="uk">
     </div>
+
     <div>
-      <button class="randomize">Generate random story</button>
+      <button class="randomize-btn">Generate random story</button>
     </div>
-    <!-- Thanks a lot to Willy Aguirre for his help with the code for this assessment -->
-    <p class="story"></p>
+
+    <!-- The output. -->
+    <p class="output-paragraph"></p>
   </body>
 </html>
